# wasm_api

./: .clang-format  .gitignore  .gitmodules  AUTHORS  Makefile.am  Makefile.am.fragment  README.md  configure.ac  test.cc  wasm_api-uninstalled.pc.in  wasm_api.pc.in
.github/workflows/: cpp.yml
include/wasm_api/: build_endian.h.in  error.h  value_type.h  wasm_api.h
stitch_lib/: Cargo.toml
stitch_lib/src/: lib.rs
tests/: gas_api_test.cc  instantiate_tests.cc  invoke_arity_tests.cc  load_wasm.h  mem_test.cc  no_start_test.cc  phony_script_db.h  return_test.cc  userctx_tests.cc  wasm3_test.cc  wasm_api_test.cc
tests/wat/: test_call_simple.wat  test_error_handling.wat  test_invoke.wat  test_invoke_arity.wat  test_no_start.wat  test_return.wat  test_set_memory.wat
wasm_api/: ffi_trampolines.cc  ffi_trampolines.h  fizzy_api.cc  fizzy_api.h  stitch_api.cc  stitch_api.h  wasm3.h  wasm3_api.cc  wasm3_api.h  wasm_api.cc  wasmi_api.cc  wasmi_api.h  wasmtime_api.cc  wasmtime_api.h
wasmi_lib/: Cargo.toml  cbindgen.toml
wasmi_lib/src/: common.rs  context.rs  external_call.rs  invoke_result.rs  lib.rs  memory.rs  runtime.rs  stitch_context.rs  stitch_runtime.rs  wasmi_context.rs  wasmi_runtime.rs  wasmtime_context.rs  wasmtime_runtime.rs
